# nain4

./: flake.nix
.github/workflows/: test.yml
client_side_tests/client_fetch_content/: CMakeLists.txt
client_side_tests/client_independent_installation/: CMakeLists.txt
client_side_tests/client_subdirectory/: CMakeLists.txt
doc/book/: 404.html  displacements-and-rotations-are-not-commutative.html  explanation.html  how-to.html  input-types-of-boolean-solids-methods.html  introduction.html  n4-boolean-solids.html  n4-place.html  n4-shape.html  placement-laziness-and-accumulation.html  print.html  reference.html  searchindex.js  searchindex.json  tutorials.html
doc/book/how-to/: build-a-minimal-nain4-app.html  enable-nain4-in-cmake.html
doc/src/: n4-shape.md
nain4/: CMakeLists.txt
